[package]
name = "rocket_prometheus"
description = """
Prometheus instrumentation for Rocket applications.
"""
version = "0.10.1"
authors = ["Ben Sully <ben.sully88@gmail.com>"]
repository = "https://github.com/sd2k/rocket_prometheus"
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["rocket", "prometheus", "instrumentation", "monitoring"]
readme = "README.md"

[dependencies]
prometheus-client = { version = "0.23" }
rocket = { git = "https://github.com/rwf2/Rocket", branch = "master" }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
rocket = { git = "https://github.com/rwf2/Rocket", branch = "master", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }

[badges]
maintenance = { status = "passively-maintained" }
